# open-qbench

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  main.py  main_orca.py  pyproject.toml
docs/: .gitignore  build.sh  conf.py  examples.rst  index.rst  tutorials.rst
docs/source/: api.rst  conf.py  index.rst  usage.rst
examples/: README.md  ibm_example.py  main_orca.py  orca_example.py  orca_example_new.py  orca_sampler.py
open_qbench/: __init__.py  application_benchmark.py  base_benchmark.py  boson_sampling.py  fidelities.py  fidelity_benchmark.py  utils.py
open_qbench/analysis/: __init__.py  feasibility_ratio.py  fidelity.py
open_qbench/apps/: ghz.py  grover.py  max_cut_orca.py  qaoa.py  qft.py  qsvm.py  toffoli.py  vqe.py
open_qbench/benchmarks/: __init__.py  application_benchmark.py  optimization_benchmark.py
open_qbench/core/: __init__.py  benchmark.py  highlevel_benchmark.py  hybrid_benchmark.py  manager.py
open_qbench/metrics/: feasibilities.py  fidelities.py
open_qbench/orca/: __init__.py  sampler.py
open_qbench/photonics/: __init__.py  photonic_circuit.py  photonic_gates.py
open_qbench/sampler/: __init__.py  benchmark_sampler.py  bosonic_sampler.py  circuit_sampler.py
qasm_circuits/: QAOA_JSSP_7q.qasm  QFT_4q.qasm  QSVM_MNIST_8q.qasm  UCCSD_LiH_3q.qasm  grover_3q.qasm
qc_app_benchmarks/: backend_comparison.py  base_benchmark.py  benchmark.py  electre.py  electre_test.py  fidelities.py  fidelity_benchmark.py  sampler.py  utils.py
qc_app_benchmarks/apps/: ghz.py  grover.py  max_cut_orca.py  qaoa.py  qft.py  qsvm.py  toffoli.py  vqe.py
qc_app_benchmarks/data/: mnist_train100_dim4.csv  mnist_ytrain100_dim4.csv
qc_app_benchmarks/examples/: ibm_example.py  main.py  main_orca.py  orca_example_new.py
qc_app_benchmarks/photonics/: __init__.py  photonic_circuit.py  photonic_gates.py
qc_app_benchmarks/sampler/: annealing_sampler.py  base_sampler.py  bosonic_sampler.py  circuit_sampler.py  orca_sampler.py
test/: test_orca_benchmark.py  test_orca_sampler.py  test_photonic_circuit.py
tests/: test_analysis.py  test_apps.py  test_benchmarks.py  test_boson_sampling.py  test_feasibility.py  test_fidelities.py  test_orca_benchmark.py  test_orca_sampler.py  test_photonic_circuit.py  test_utils.py
(+22 files in other folders)
