[project]
name = "quantum-app-benchmarks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["qiskit-aer~=0.16", "qiskit~=1.0"]

[project.optional-dependencies]
VQE = ["qiskit-nature[pyscf]>=0.7.2"]
QSVM = ["scikit-image>=0.25.1"]
IBM = ["qiskit-ibm-runtime>=0.36.1"]

[dependency-groups]
dev = ["pytest>=8.3.4"]

# Added manually to include .csv file for MNIST
[tool.setuptools.packages.find]
where = ["."]
include = ["qc_app_benchmarks*"]

[tool.setuptools.package-data]
qc_app_benchmarks = ["*.csv"]
