[project]
name = "open_qbench"
version = "0.2.0"
description = "Package for developing and executing quantum computing benchmarks"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = ["qiskit-aer~=0.16", "qiskit~=1.0"]

[project.optional-dependencies]
VQE = ["qiskit-nature[pyscf]>=0.7.2"]
QSVM = ["scikit-image>=0.25.1"]
IBM = ["qiskit-ibm-runtime>=0.36.1"]
AQT = ["qiskit-aqt-provider>=1.10.0"]
ORCA = ["ptseries @ git+ssh://git@sdk.orcacomputing.com/orca/ptseries.git"]

[dependency-groups]
dev = [
    "better-apidoc>=0.3.2",
    "myst-nb>=1.3.0",
    "pandoc>=2.4",
    "pytest>=8.3.4",
    "pytest-httpx>=0.35.0",
    "sphinx>=8.2.3",
    "sphinx-book-theme>=1.1.4",
    "sphinx-copybutton>=0.5.2",
]

[tool.pytest.ini_options]
pythonpath = "."

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
